-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.2.2, 10.3.0
-
Fix Version/s: 10.4.4
-
Component/s: Data Definition - Alter Table, Storage Engine - InnoDB
-
Labels:
MDEV-7318 is requesting SQL syntax for ALTER TABLEā¦RENAME INDEX, similar to MySQL 5.7.
One could use DROP INDEX, ADD INDEX to simulate RENAME INDEX, but that will currently cause InnoDB to rebuild the index. The index rebuild should be optimized away, and only the index should be renamed. The InnoDB source code for renaming indexes exists starting with MariaDB 10.2, but it is disabled.
InnoDB should allow ALGORITHM=INSTANT operation for DROP INDEX, ADD INDEX when there is no actual data change. If an index is marked as corrupted, it would be nice to refuse ALGORITHM=INSTANT and actually rebuild the index.
- causes
-
MDEV-23356 InnoDB: Failing assertion: field->col->mtype == type, crash or ASAN failures in row_sel_convert_mysql_key_to_innobase, InnoDB indexes are inconsistent after INDEX changes
-
- Closed
-
- is blocked by
-
MDEV-17376 Server fails to set ADD_PK_INDEX, DROP_PK_INDEX if unique index nominated as PK
-
- Closed
-
- is duplicated by
-
MDEV-18259 ASAN heap-use-after-free or server crash in get_foreign_key_info
-
- Closed
-
- relates to
-
MDEV-23571 InnoDB does not raise a warning if ALTER TABLE index operations are optimized away
-
- Open
-
-
MDEV-7318 RENAME INDEX
-
- Closed
-
-
MDEV-11424 Instant ALTER TABLE of failure-free record format changes
-
- Closed
-
-
MDEV-13134 Introduce ALTER TABLE attributes ALGORITHM=NOCOPY and ALGORITHM=INSTANT
-
- Closed
-